release branch 0.6.0